# auementations

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
auementations/adapters/: __init__.py  pedalboard.py  torch_audiomentations.py
auementations/config/: __init__.py  config_store.py  store.py  structured.py
auementations/core/: base.py  composition.py
examples/: basic_usage.py  hydra_usage.py
examples/hydra_config/: config.yaml
src/auementations/adapters/: __init__.py  custom.py  pedalboard.py  torch_audiomentations.py
src/auementations/config/: config_store.py
src/auementations/core/: base.py  composition.py  parameters.py
src/auementations/utils/: __init__.py
tests/: conftest.py  test_logging.py
tests/adapters/: test_custom_augs.py  test_output_types.py  test_pedalboard.py  test_pedalboard_nan_inf.py  test_pedalboard_peak_filter.py
tests/config/: test_config_store.py  test_pedalboard_config.py  test_realistic_examles.py  test_store.py
tests/core/: test_base.py  test_composition.py  test_dict_composition.py  test_parameters.py
tests/utils/: test_conversions.py
