[project]
name = "auementations"
version = "0.3.0"
description = "A composable audio augmentation library with Hydra configuration support"
readme = "README.md"
authors = [
    { name = "Christopher Jacoby" },
    { name = "Constantinos Dimitriou" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "hydra-core>=1.3.0",
    "hydra-zen>=0.13.0",
    "pydantic>=2.0.0",
    "beartype>=0.22.6",
    "einops>=0.8.1",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torch-audiomentations>=0.11.0",
]
pedalboard = [
    "pedalboard>=0.9.0",
]
all = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torch-audiomentations>=0.11.0",
    "pedalboard>=0.9.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auementations"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
directory = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
